--- a/src/applications/voipstream/ChangeLog
+++ b/src/applications/voipstream/ChangeLog
@@ -1,3 +1,12 @@
+2012-09-13  Zoltan Bojthe
+
+    Renamed feature to VoIPStream.
+    Renamed classes, modules, messages, files:
+      - VoIPPacket to VoIPStreamPacket
+      - VoIPSourceApp to VoIPStreamSender
+      - VoIPSinkApp to VoIPStreamReceiver
+      - example folders and modules
+
 2012-08-07  ------ inet-2.0.0 released ------
 
 2012-06-25  ------ inet-1.99.5 released ------
